# visual-search-nets

./: .gitignore  .travis.yml  CITATION.txt  LICENSE  Makefile  README.md  config.ini  environment-mac.yml  environment.yml  pyproject.toml  setup.py  spec-file.txt
data/: rerun_test_all.sh  runall.sh  runall_VGG16_all.sh  runall_VGG16_finetune.sh  runall_VGG16_learncurve_2_v_5.sh  runall_VGG16_train.sh  runall_VSD.sh  runall_alexnet_CORnet_Z_VSD.sh  runall_alexnet_InvDPrime_finetune_data.sh  runall_alexnet_all.sh  runall_alexnet_finetune.sh  runall_alexnet_learncurve.sh  runall_alexnet_learncurve_2_v_5.sh  runall_alexnet_rerun_finetune_data.sh  runall_alexnet_train.sh  runall_alexnet_train_big_set_and_sample_size.sh  runall_alexnet_train_even_more.sh  runall_alexnet_train_finetune_data.sh
data/Visual_Search_Difficulty_v1.0/: README.txt  VSD_dataset.csv  VSD_dataset.mat  VSD_dataset_for_visualizing.csv  VSD_dataset_split.csv  citation.bib
data/configs/: VSD_CORnet_Z_initialize_lr_1e-03.ini  VSD_CORnet_Z_transfer_lr_1e-03_no_finetune.ini  VSD_VGG16_transfer_lr_1e-03_no_finetune.ini  VSD_alexnet_initialize_lr_1e-03.ini  VSD_alexnet_transfer_lr_1e-03_no_finetune.ini  config_feature_102_alexnet.ini  config_feature_153_alexnet.ini  config_feature_204_alexnet.ini  config_feature_51_alexnet.ini  config_feature_alexnet.ini  (+61 more)
docs/: CHANGELOG.md  cli.md  config.ini.md  doc.md
results/: all-test-results.csv  all-three-test-results.csv  test-results.csv
src/: runall.py  runall.sh
tests/: __init__.py  test_metrics.py  test_train.py  test_vocdataset.py
(+321 files in other folders)
